tests/semantic/valid/10_nested_calls.src
fn add(a int, b int) -> int {
    return a + b;
}

fn multiply(a int, b int) -> int {
    return a * b;
}

fn main() -> int {
    return add(multiply(2, 3), multiply(4, 5));
}
