tests/semantic/invalid/12_arg_count.src
fn add(a int, b int) -> int {
    return a + b;
}

fn main() -> int {
    int x = add(5);
    return x;
}
